--- a/src/MainForm.form
+++ b/src/MainForm.form
@@ -14,20 +14,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="ce6ca" class="javax.swing.JComboBox" binding="comboBoxTargetFormat">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="ee673" class="javax.swing.JButton" binding="buttonTransform">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Transform"/>
-        </properties>
-      </component>
       <component id="3edb4" class="javax.swing.JTextArea" binding="textAreaSourceInfo">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -36,13 +22,34 @@
         </constraints>
         <properties/>
       </component>
-      <component id="5d5db" class="javax.swing.JTextArea" binding="textAreaTargetInfo">
+      <scrollpane id="1ae5f">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
+        <border type="none"/>
+        <children>
+          <component id="5d5db" class="javax.swing.JTextArea" binding="textAreaTargetInfo">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="ee673" class="javax.swing.JButton" binding="buttonTransform">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Transform"/>
+        </properties>
+      </component>
+      <component id="ce6ca" class="javax.swing.JComboBox" binding="comboBoxTargetFormat">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model/>
+        </properties>
       </component>
     </children>
   </grid>
